    RC1:
    - MFT optimization implemented
    - repeat action menu and toolbar button were added to GUI
    - --repeat command line switch was added to the console interface
      and to the boot time defragmenter
    - one bug causing incorrect time limit treatment was fixed
    - added display of the time limit at boot time
    - the following translations were added:

      Latin, Hebrew

    - the following translations were updated:

      Portuguese (BR), Yiddish, Hungarian, Spanish (ES)
    
    - installer has been enhanced in the following ways:
      + installer supports full, micro edition and custom installation
      + component selections are remembered between installations
      + shortcut icons can be selected individually
      + all selections can be done through command line switches
        during silent installations using the /S switch:
            * /FULL .............. install full installation
            * /MICRO ............. install micro edition (no GUI, no help, no icons)
            * /ICONS ............. install/remove all shortcut icons
            * /GUI ............... install/remove GUI component
            * /HELP .............. install/remove documentation
            * /SHELLEXTENSION .... install/remove Explorer context menu handler
            * /STARTMENUICON ..... install/remove start menu icon
            * /DESKTOPICON ....... install/remove desktop icon
            * /QUICKLAUNCHICON ... install/remove quick launch icon

    beta3:
    - volume optimization reimplemented
    - quick volume optimization implemented
    - the cluster map now indicates unused map blocks with gray color
    - one bug preventing a proper redraw of defragmented files was fixed
    - few bugs causing infinite loops in defragmentation algorithm were fixed
    - one bug preventing MFT defragmentation was fixed
    - one bug preventing reports containing Asian characters in file names
      from being built was fixed