@@ -41,13 +41,13 @@ WORD colors[NUM_OF_SPACE_STATES] = {
 	FOREGROUND_RED,
 	FOREGROUND_BLUE | FOREGROUND_INTENSITY,
 	FOREGROUND_BLUE,
+	FOREGROUND_RED | FOREGROUND_GREEN | FOREGROUND_INTENSITY,
+	FOREGROUND_RED | FOREGROUND_GREEN,
+	FOREGROUND_RED | FOREGROUND_GREEN | FOREGROUND_INTENSITY,
+	FOREGROUND_RED | FOREGROUND_GREEN,
 	FOREGROUND_RED | FOREGROUND_BLUE | FOREGROUND_INTENSITY,
 	FOREGROUND_RED | FOREGROUND_BLUE,
-	FOREGROUND_RED | FOREGROUND_GREEN | FOREGROUND_INTENSITY,
-	FOREGROUND_RED | FOREGROUND_GREEN,
-	FOREGROUND_RED | FOREGROUND_GREEN | FOREGROUND_INTENSITY,
-	FOREGROUND_RED | FOREGROUND_GREEN,
-	FOREGROUND_GREEN | FOREGROUND_BLUE | FOREGROUND_INTENSITY,
+	FOREGROUND_GREEN | FOREGROUND_BLUE | FOREGROUND_INTENSITY
 };
 
 short map_border_color = BORDER_COLOR;
